--- a/index.html
+++ b/index.html
@@ -1,19 +1,27 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Hero Page</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Neil Vincent Monsalud | Marketing & Strategy</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header class="hero">
-    <div class="hero-content">
-      <h1>Hello, I'm Neil</h1>
-      <p>Marketing strategist | SEO expert | Tokyo-based entrepreneur</p>
-      <a href="#work" class="btn">See My Work</a>
+    <div class="hero-content fade-in">
+      <h1>Neil Vincent Monsalud</h1>
+      <p class="subtitle">Marketing Strategist & SEO Expert in Tokyo</p>
+      <a href="#work" class="btn">View My Work</a>
     </div>
   </header>
+
+  <section id="work" class="section">
+    <h2>My Work</h2>
+    <p>Coming soon — strategic marketing insights, Japan business stories, and SEO resources.</p>
+  </section>
+
+  <footer>
+    <p>© 2025 Neil Vincent Monsalud</p>
+  </footer>
 </body>
 </html>
