--- a/index.html
+++ b/index.html
@@ -5,12 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Neil Vincent Monsalud | Marketing & Strategy</title>
   <link rel="stylesheet" href="style.css" />
+  <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet">
 </head>
 <body>
   <header class="hero">
     <div class="hero-content fade-in">
+      <img src="images/profile.jpg" alt="Neil Vincent Monsalud" class="profile-img">
       <h1>Neil Vincent Monsalud</h1>
       <p class="subtitle">Marketing Strategist & SEO Expert in Tokyo</p>
+      <div class="social-links">
+        <a href="https://linkedin.com/in/YOURUSERNAME" target="_blank"><i class="ri-linkedin-box-fill"></i></a>
+        <a href="https://instagram.com/YOURUSERNAME" target="_blank"><i class="ri-instagram-line"></i></a>
+        <a href="https://x.com/YOURUSERNAME" target="_blank"><i class="ri-twitter-x-line"></i></a>
+      </div>
       <a href="#work" class="btn">View My Work</a>
     </div>
   </header>
@@ -25,3 +32,5 @@
   </footer>
 </body>
 </html>
+
+
