--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
+<header class="nav">
+  <nav>
+    <a href="index.html" class="logo">Neil Monsalud</a>
+    <ul class="nav-links">
+      <li><a href="about.html">About</a></li>
+      <li><a href="works.html">Works</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+</header>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -32,5 +43,6 @@
   </footer>
 </body>
 </html>
+
 
 
